refactor : @transactional 추가 (#797)